# scripts

./: .env.example  .gitignore  .taplo.toml  README.md  benchmark-avg-request-response-time.js  cli  cli.py  pyproject.toml  scrape-neuro-app.js
.github/workflows/: modem-restart.yaml  rss-subscribe.yaml
archive/: sendgrid.py
benchmarks/: avg-request-response-time.js
common/: cli.py  fp.py  logs.py  pushover.py  secrets.py  sendgrid.py
feedbin/: add.py  api.py  cli.py  client.py  subscribe.py  subscribe.sh  subscriptions.sh  validation.sh
feedbin/adapters/: cli.py
feedbin/adapters/api/: __init__.py  entries.py  subscriptions.py  unread_entries.py
feedbin/api/: entries.py  subscriptions.py
feedbin/application/: add_subscription.py  list_entries.py  list_subscriptions.py  mark_entries_unread.py
feedbin/commands/: add.py  list.py  mark_unread.py
feedbin/domain/: entities.py
internet/: monitor-connection.sh  monitor-speed.sh  monitor_connection.py
modem/: README.md  restart.py
notifications/: sendgrid.py
op/: README.md  credentials.py  items.py  secrets.py
rss/: README.md  cli.py  domain.py  entities.py  sheets.py
rss/entries/: entities.py
rss/entries/list/: cli.py  feedbin.py  main.py
rss/entries/mark_unread/: cli.py  feedbin.py  main.py
rss/subscriptions/: entities.py
rss/subscriptions/add/: cli.py  feedbin.py  main.py  sheets.py  sms.py
rss/subscriptions/delete/: cli.py  feedbin.py  main.py  sms.py
rss/subscriptions/get/: feedbin.py  main.py
rss/subscriptions/tag/: feedbin.py  main.py
rss/subscriptions/update/: feedbin.py  main.py
rss/utils/: feedbin.py
tests/: test_cli.py
tic_tac_toe/: play.py
tic_tac_toe/tests/: test_play.py
utils/: cli.py  logs.py
