#:schema https://json.schemastore.org/pyproject.json

# See: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[project]
  name = "scripts"
  description = "Quick solutions to small problems"
  requires-python = ">=3.13"
  version = "0.1.0"
  dependencies = [
    "funcy>=2.0",
    "google-auth>=2.36.0",
    "gspread>=6.1.4",
    "mypy>=1.13.0",
    "playwright>=1.48.0",
    "pydantic>=2.9.2",
    "requests>=2.32.3",
    "returns>=0.23.0",
    "rich>=13.9.3",
    "ruff>=0.7.1",
    "sendgrid>=6.11.0",
    "toolz>=1.0.0",
    "typer>=0.12.5",
  ]

[dependency-groups]
  dev = ["types-requests>=2.32.0.20241016"]

[tool.mypy]
  plugins = ["returns.contrib.mypy.returns_plugin"]
  strict = true

[tool.ruff]
  line-length = 100

  [tool.ruff.format]
    docstring-code-format = true

  [tool.ruff.lint]
    extend-select = [
      "I", # enable isort rules in the CLI (see: https://github.com/astral-sh/ruff-vscode?tab=readme-ov-file#configuring-vs-code)
    ]
    unfixable = [
      "F401", # don't delete unused imports while fixing lint errors on save
    ]
